--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
    .secondary-button:hover {
     box-shadow: 10px 10px 10px rgba(0,0, 0, 0.5);
   }
+    section{
+      left: 5px;
   iframe{
     border-radius: 20px;
     left:5px;
