--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <h1>Welcome</h1>
   <h5>Kusoo Dhawoow Website-ka Ali Gabeyre </h5>
    <section>
+     <div class="iframe1">
   <iframe width="440" height="245" src="https://www.youtube.com/embed/9JdenpwFb2M?si=tRKe3Xz2MGXho2sf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <iframe width="440" height="245" src="https://www.youtube.com/embed/cqRGYeyx2JA?si=6-G-I6Bb6yEchsdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <iframe width="440" height="245" src="https://www.youtube.com/embed/NDGV3_4xKDU?si=CrvD9-9EefKrzCqk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -115,6 +116,7 @@
     <a href="https://www.voasomali.com/a/fidan-oo-war-ka
     -soo-saaray-wada-hadallada-soomaaliya-iyo-itoobiya-
     /7790331.html/" target="_blank"> <h2>Voa VoaSomali </h2></a>
+  </div>
 
   </section>
 
