--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    .secondary-button:hover {
     box-shadow: 10px 10px 10px rgba(0,0, 0, 0.5);
   }
-    section{
+    .iframe1 {
       left: 5px;
     }
   iframe{
